changed a bunch of styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,10 @@
  *= require_tree .
  *= require_self
  */
+ .newbgcolor {
+   background-color: #EAE7DC;
+ }
+
+ // .newtilebgcolor {
+ //   background-color: #C1C8E4;
+ // }
