--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,6 @@
    background-color: #EAE7DC;
  }
 
- // .newtilebgcolor {
- //   background-color: #C1C8E4;
- // }
+ .campaignHeader {
+     background-image: url("../images/dnd_campaign_tile_01.png");
+ }
