got posting new sessions to work

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,12 +22,11 @@
  .campaignHeader {
    position: relative;
    background-color: rgba(28, 19, 42, 0.7);
-
  }
 
  .campaignHeader-background-image {
    position: absolute;
-   background-image: url("http://pre09.deviantart.net/3197/th/pre/i/2015/019/e/c/fantasy_landscape_by_raymondminnaar-d8eii74.jpg");
+   background-image: url("http://2.bp.blogspot.com/-lSsM-PZ8flU/UBxF37UgXdI/AAAAAAAAAQs/aI6cpOQJgD0/s1600/Fantasy+City.jpg");
    background-size: cover;
    background-position: center;
    height: 100%;
