--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
  .campaignHeader {
    position: relative;
    background-color: rgba(28, 19, 42, 0.7);
+   box-shadow: 0px 8px 15px -2px rgba(0,0,0,0.5);
  }
 
  .campaignHeader-background-image {
@@ -35,10 +36,15 @@
    z-index: -1;
  }
 
+ .header-cinzel-font {
+   font-family: 'Cinzel', cursive;
+ }
+
  .campaignHeader-bottom-bar {
    color: white;
    padding: 15px;
    background-color: rgba(28, 19, 42, 0.5);
+   box-shadow: inset 0px 8px 15px -2px rgba(0,0,0,0.3);
  }
 
  .newSessionForm {
