--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,22 @@
    z-index: -1;
  }
 
+ .login-background-image {
+   position: absolute;
+   background-image: url("http://rubberchickengames.com/wp-content/uploads/2017/03/55b4cbc698e80755a1657e3f68034169.jpg");
+   background-size: cover;
+   background-position: center;
+   height: 100%;
+   width: 100%;
+   top: 0;
+   z-index: -100;
+ }
+
+.login-background {
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 8px 15px -2px rgba(0,0,0,0.6);
+}
+
  .header-cinzel-font {
    font-family: 'Cinzel', cursive;
  }
