--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,8 +48,9 @@
  }
 
 .login-background {
-  background-color: rgba(0, 0, 0, 0.7);
-  box-shadow: 0px 8px 15px -2px rgba(0,0,0,0.6);
+  background-color: rgba(0, 0, 0, 0.8);
+  box-shadow: 5px 5px 15px -2px rgba(0,0,0,0.6);
+  padding: 50px;
 }
 
  .header-cinzel-font {
@@ -75,11 +76,26 @@
  .newSessionForm.-active {
    max-height: 500px;
  }
-
- // .campaignHeader-description-container {
- //   height: 0px;
- //   &:hover {
- //     height: auto;
- //     max-height: 300px;
- //   }
- // }
+ .flexie {
+   .container {
+     position: absolute;
+     right: 0;
+     left: 0;
+     margin: 0 auto;
+   }
+   #add-model {
+     transition: all 0.45s ease;
+     background-color: #fff;
+     box-shadow: 5px 5px 15px -2px rgba(0,0,0,0.6);
+     color: #000;
+     position: fixed;
+     left: 0;
+     right: 0;
+     margin: 0 auto;
+     top: 50%;
+     width: 500px;
+     form {
+       padding: 50px;
+     }
+   }
+ }
