--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,7 +65,7 @@
  }
 
  .newSessionForm {
-   transition: max-height 1s ease-in;
+   transition: max-height 0.5s ease-in;
  }
 
  .newSessionForm.-inactive {
@@ -76,6 +76,14 @@
  .newSessionForm.-active {
    max-height: 500px;
  }
+
+
+ .user-tile {
+   background-color: white;
+   padding: 5px;
+ }
+
+
  .flexie {
    .container {
      position: absolute;
@@ -84,7 +92,7 @@
      margin: 0 auto;
    }
    #add-model {
-     transition: all 0.45s ease;
+     transition: all 0.5s ease;
      background-color: #fff;
      box-shadow: 5px 5px 15px -2px rgba(0,0,0,0.6);
      color: #000;
