did a few more things and added user and character seeds

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@
    position: absolute;
    background-image: url("http://2.bp.blogspot.com/-lSsM-PZ8flU/UBxF37UgXdI/AAAAAAAAAQs/aI6cpOQJgD0/s1600/Fantasy+City.jpg");
    background-size: cover;
-   background-position: center;
+  //  background-position: center;
    height: 100%;
    width: 100%;
    top: 0;
