--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,8 +28,8 @@
  .campaignHeader-background-image {
    position: absolute;
    background-image: url("http://2.bp.blogspot.com/-lSsM-PZ8flU/UBxF37UgXdI/AAAAAAAAAQs/aI6cpOQJgD0/s1600/Fantasy+City.jpg");
-  //  background-size: cover;
-  //  background-position: center;
+   background-size: cover;
+   background-position: center;
    height: 100%;
    width: 100%;
    top: 0;
@@ -65,7 +65,7 @@
  }
 
  .newSessionForm {
-   transition: max-height 0.5s ease-in;
+   transition: all 0.7s ease;
  }
 
  .newSessionForm.-inactive {
